# airwallex-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  accept_payment.py  async_quickstart.py  error_handling.py  fx_conversion.py  issue_cards.py  local_lifecycle_test.py  local_smoke_test.py  payout_quickstart.py  webhook_server.py
src/airwallex/: __init__.py  _auth.py  _client.py  _constants.py  _errors.py  _models.py  _pagination.py  client.py  webhooks.py
src/airwallex/resources/: __init__.py  _base.py  accounts.py  balances.py  batch_transfers.py  beneficiaries.py  conversion_amendments.py  conversions.py  deposits.py  finance.py  fx_quotes.py  global_accounts.py  issuing.py  payers.py  payment_acceptance.py  reference.py  simulation.py  transfers.py  wallet_transfers.py  webhook_endpoints.py
src/airwallex/types/: __init__.py  account.py  balance.py  batch_transfer.py  beneficiary.py  conversion.py  conversion_amendment.py  deposit.py  finance.py  fx_quote.py  global_account.py  issuing.py  payer.py  payment_acceptance.py  transfer.py  wallet_transfer.py  webhook_endpoint.py
tests/: conftest.py  test_auth.py  test_client.py  test_finance_simulation.py  test_issuing.py  test_models.py  test_pagination.py  test_payment_acceptance.py  test_payouts_fx.py  test_resources.py  test_webhooks.py  test_wiring.py
