[project]
name = "airwallex"
dynamic = ["version"]
description = "Unofficial Python SDK for the Airwallex API — payouts, FX, global accounts, and more."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cyrus David Pastelero", email = "cyrus@pastelero.ph" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0,<1",
    "pydantic>=2.5.0,<3",
]
keywords = ["airwallex", "payments", "payouts", "fx", "fintech", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Cyvid7-Darus10/airwallex-python"
Repository = "https://github.com/Cyvid7-Darus10/airwallex-python"
Documentation = "https://github.com/Cyvid7-Darus10/airwallex-python#readme"
Changelog = "https://github.com/Cyvid7-Darus10/airwallex-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/Cyvid7-Darus10/airwallex-python/issues"

[tool.hatch.version]
path = "src/airwallex/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airwallex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# Optional[X] stays: pydantic evaluates annotations at runtime and PEP 604
# unions (X | None) need Python 3.10+, but we support 3.9.
ignore = ["UP007", "UP045"]

[tool.mypy]
strict = true
files = ["src"]

[tool.coverage.run]
source = ["src/airwallex"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
